# DSLforPuzzles

./: .envrc  CHANGELOG.md  DSLTest.cabal  LICENSE  PuzzleDSL.cabal  README.md  default.nix  flake.nix  result
.github/workflows/: ci.yml  test.yml
app/: Main.hs  Src.txt
lib/: Component.hs  DSL.hs  Lib.hs  Reader.hs  Reader2.hs  Rule.hs  Solve.hs  Spec.hs  Spec2.hs  Utils.hs
lib/PuzzleDSL/: DSL.hs
lib/PuzzleDSL/Internal/: Component.hs  Rule.hs  Solve.hs  Spec.hs  Utils.hs
lib/PuzzleDSL/Internal/Features/: Component.hs  Count.hs  Sum.hs
lib/PuzzleDSL/Text/: Parser.hs  Text.hs
nix/: hix.nix
test/: Connectivity.hs  Misc.hs  Spec.hs  Sudoku.hs  Utils.hs
test/Tests/: Utils.hs
test/Tests/Features/: Bool.hs  Connectivity.hs  Count.hs  Misc.hs  Property.hs  Spec.hs  Sum.hs
test/Tests/Puzzles/: Sudoku.hs
text/: examples.puz  sudoku.puz
