cabal-version:      3.0
name:               DSLTest
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Patrick Aldis
maintainer:         patrick.aldis@virginmedia.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   lib
    build-depends:    base,
                      sbv,
                      containers,
                      transformers

    default-language: Haskell2010
    exposed-modules:  Spec,
                      Spec2,
                      Reader,
                      Reader2,
                      DSL

    extra-libaries: z3

executable DSLTest
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      sbv,
                      transformers,
                      DSLTest

    extra-libraries:  z3
    hs-source-dirs:   app
    default-language: Haskell2010
