cabal-version:      3.0
name:               DSLTest
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Patrick Aldis
maintainer:         patrick.aldis@virginmedia.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   lib
    build-depends:    base,
                      sbv,
                      containers,
                      transformers

    default-language: Haskell2010
    exposed-modules:  DSL
    other-modules:    Spec,
                      Utils,
                      Solve

executable DSLTest
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      sbv,
                      transformers,
                      DSLTest

    extra-libraries:  z3
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite testing
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base,
                      hspec,
                      sbv,
                      containers,
                      DSLTest
    default-language: Haskell2010
    hs-source-dirs:   test
    other-modules:    Sudoku,
                      Misc,
                      Utils

