cabal-version:      3.0
name:               PuzzleDSL
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Patrick Aldis
maintainer:         patrick.aldis@virginmedia.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   lib
    build-depends:    base,
                      sbv,
                      containers,
                      transformers,
                      megaparsec

    default-language: Haskell2010
    exposed-modules:  PuzzleDSL.DSL,
                      PuzzleDSL.Text.Parser
    other-modules:    PuzzleDSL.Internal.Spec,
                      PuzzleDSL.Internal.Features.Sum,
                      PuzzleDSL.Internal.Features.Count,
                      PuzzleDSL.Internal.Features.Component,
                      PuzzleDSL.Internal.Utils,
                      PuzzleDSL.Internal.Rule,
                      PuzzleDSL.Internal.Solve

executable PuzzleDSL
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      sbv,
                      transformers,
                      megaparsec,
                      PuzzleDSL

    extra-libraries:  z3
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite testing
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base,
                      hspec,
                      QuickCheck,
                      sbv,
                      containers,
                      PuzzleDSL
    default-language: Haskell2010
    hs-source-dirs:   test, lib
    other-modules:    Tests.Utils,
                      Tests.Features.Spec,
                      Tests.Features.Bool,
                      Tests.Features.Property,
                      Tests.Features.Sum,
                      Tests.Features.Connectivity,
                      PuzzleDSL.Internal.Features.Component,
                      Tests.Puzzles.Sudoku
                      


